--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js" type="module"></script>
+    <script src="main.js" type="module"></script>
 </head>
 <body>
-    <h1>Redux State</h1>
-
     
+
+    <div id="root"></div>
 </body>
 </html>
